Set up a function to change the images on a timer, but its not working. It reading the condition right, but not doing anything. I think its because I need to look at each image, and use changeImg on them. I'll try looping through them using a querySelectorAll, and then calling changeImg on each one

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img src="img/hole.jpg" alt="" class="three hole">
         <img src="img/hole.jpg" alt="" class="four hole">
         <img src="img/hole.jpg" alt="" class="five hole">
+        <button class="easy">Easy(5 Secs)</button>
     </div>
 </body>
 </html>
