Ok well all of them toggle now, but the console is filled with errors, but it still works. I think I should try combining the functions into one

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="gameBoard">
-        <img src="img/hole.jpg" alt="" class="one hole gameImg">
+        <img src="img/hole.jpg" alt="" class="one hole">
         <img src="img/hole.jpg" alt="" class="two hole">
         <img src="img/hole.jpg" alt="" class="three hole">
         <img src="img/hole.jpg" alt="" class="four hole">
