--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Whack a Mole</title>
 </head>
 <body>
+    <div>
+        <p class="score"></p>
+        <p class="gameTimer"></p>
+    </div>
     <div class="gameBoard">
         <img src="img/hole.jpg" alt="" class="one hole">
         <img src="img/hole.jpg" alt="" class="two hole">
