Added a replay button. It reloads the page

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         <img src="img/hole.jpg" alt="" class="five hole">
         <button class="easy">Easy(5 Secs)</button>
     </div>
+    <button class="replayBtn">Replay</button>
 </body>
 </html>
