I added some buttons that say how long the mole should stay out, but the problem witht the timers is causing it not to work right. I'm probably going to have to change how I'm going about this

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <img src="img/hole.jpg" alt="" class="three hole">
         <img src="img/hole.jpg" alt="" class="four hole">
         <img src="img/hole.jpg" alt="" class="five hole">
-        <button class="easy">Easy(5 Secs)</button>
+        <button class="easyBtn">Easy(5 Secs)</button>
+        <button class="normalBtn">Normal(3 secs)</button>
+        <button class="hardBtn">Hard(1 sec)</button>
     </div>
     <button class="replayBtn">Replay</button>
 </body>
