When the game timer hits 9 the text gets bigger, and changes to red. I'm also styling it up a little bit

--- a/index.html
+++ b/index.html
@@ -8,20 +8,27 @@
     <title>Whack a Mole</title>
 </head>
 <body>
-    <div>
-        <p class="score"></p>
-        <p class="gameTimer"></p>
+    <div class="info">
+        <p class="score">0</p>
+        <div class="btns">
+            <button class="easyBtn">Easy(5 Secs)</button>
+            <button class="normalBtn">Normal(3 secs)</button>
+            <button class="hardBtn">Hard(1 sec)</button>
+        </div>
+        <p class="gameTimer">1:00</p>
     </div>
+
     <div class="gameBoard">
         <img src="img/hole.jpg" alt="" class="one hole">
         <img src="img/hole.jpg" alt="" class="two hole">
         <img src="img/hole.jpg" alt="" class="three hole">
         <img src="img/hole.jpg" alt="" class="four hole">
         <img src="img/hole.jpg" alt="" class="five hole">
-        <button class="easyBtn">Easy(5 Secs)</button>
-        <button class="normalBtn">Normal(3 secs)</button>
-        <button class="hardBtn">Hard(1 sec)</button>
     </div>
+
     <button class="replayBtn">Replay</button>
+
+
+
 </body>
 </html>
