--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="info">
         <p class="score">0</p>
         <div class="btns">
-            <button class="easyBtn">Easy(5 Secs)</button>
-            <button class="normalBtn">Normal(3 secs)</button>
-            <button class="hardBtn">Hard(1 sec)</button>
+            <button class="easyBtn">Easy</button>
+            <button class="normalBtn">Normal</button>
+            <button class="hardBtn">Hard</button>
             <button class="replayBtn">Replay</button>
         </div>
         <p class="gameTimer">1:00</p>
